--- a/css/main.scss
+++ b/css/main.scss
@@ -5,5 +5,10 @@ body {
    display: flex;
    align-items: center;
    flex-direction: column;
-   background-image: url('../img/default.jpeg')
+   background-image: url('../img/default.jpeg');
+   background-size: cover;
+
+   .searchContainer {
+      margin: 30px 0px;
+   }
 }
