--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,27 @@
+body .searchContainer, body {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
   background-image: url("../img/default.jpeg");
+  background-size: cover;
+}
+body .searchContainer #searchField {
+  font-size: 1.5em;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+body .searchContainer #searchButton {
+  font-size: 1.5em;
+  padding: 10px;
+  width: 50%;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=main.css.map */
