--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
 }
 
+$primary-color: #F7F7FF;
+
 
 body {
    margin: 0;
@@ -21,6 +23,7 @@ body {
         font-size: 1.5em;
         padding: 10px;
         margin-bottom: 5px;
+        background-color: $primary-color;
       }
 
       #searchButton {
@@ -28,6 +31,7 @@ body {
         padding: 10px;
         width: 50%;
         margin: 0 auto;
+        background-color: $primary-color;
       }
    }
 }
