--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ body {
    justify-content: center;
    background-image: url('../img/default.jpeg');
    background-size: cover;
+   font-family: 'Niramit', sans-serif;
 
    .searchContainer {
       @extend %flex-column;
@@ -39,6 +40,24 @@ body {
    .weatherContainer {
      background-color: $primary-color;
      margin-top: 100px;
-     padding: 100px;
+     padding: 50px 75px 75px 75px;
+
+     .weatherMain {
+       @extend %flex-column;
+       justify-content: space-around;
+       align-items: center;
+       width: 250px;
+       height: 250px;
+
+      #cityName {
+        font-size: 2.5em;
+        margin: 0;
+      }
+
+      .temperature {
+        font-size: 2em;
+        text-align: center;
+      }
+     }
    }
 }
