--- a/css/main.scss
+++ b/css/main.scss
@@ -40,14 +40,15 @@ body {
    .weatherContainer {
      background-color: $primary-color;
      margin-top: 100px;
-     padding: 50px 75px 75px 75px;
 
      .weatherMain {
        @extend %flex-column;
        justify-content: space-around;
        align-items: center;
-       width: 250px;
-       height: 250px;
+
+      p {
+        margin: 0;
+      }
 
       #cityName {
         font-size: 2.5em;
@@ -57,6 +58,16 @@ body {
       .temperature {
         font-size: 2em;
         text-align: center;
+      }
+
+      .weatherInfo {
+
+        .weatherDetails {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-bottom: 20px;
+        }
       }
      }
    }
