--- a/css/main.scss
+++ b/css/main.scss
@@ -92,6 +92,21 @@ body {
    }
 }
 
+body:after{
+  content:"";
+  position:fixed; /* stretch a fixed position to the whole screen */
+  top:0;
+  height:100vh; /* fix for mobile browser address bar appearing disappearing */
+  left:0;
+  right:0;
+  z-index:-1; /* needed to keep in the background */
+  background: url('../img/default.jpeg') center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .hvr-forward {
   display: inline-block;
   vertical-align: middle;
